commiting small changes

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ avatar: https://avatars2.githubusercontent.com/u/772100?s=400&u=2be94988e7d2a1ab
 
 author:
   name: Matias Volgyi
-  position: Coder, Dreamer, Photographer
-  about: I'm a software developer with 10+ years of Java experience. Now looking for new challenges and thus jumping with both feet into Javascript and Python (learning MEAN and Django just to start). Also, I love coffe and fashion photography, but let's leave that for another day.
+  position: SysAdmin, Software Developer, father, enthusiast
+  about: I'm a system administrator with 7+ years of experience. Now working on my new challenge, become a full-time software developer.
 
 resume:
   name: Matias Volgyi
