commiting changes inexperiences

--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -2,17 +2,17 @@
   role: System Analyst
   time: 2016 - Present
   company: Opcion Seguros S.A
-  details: "Monitoring, reporting, cloud and on-premises infrastructure, pricing & assessment,
-  technical support, informatics security projects, software analysis and development"
+  details: "Monitoring and reporting, cloud and on-premises infrastructure, pricing & assessment,
+  technical support, security standardization, software analysis and development"
 - experience:
   role: Cloud Technician
   time: 2015 - 2016
   company: Sofftek
-  details: "Monitoring, Reporting, Cloud infrastructure pricing & assessment, technical support, 
-  infrastructure analysis, automation"
+  details: "Monitoring and Reporting, Cloud infrastructure pricing & assessment, technical support, 
+  analysis and automation"
 - experience:
   role: Microsoft Technician Pre Sales
   time: 2013 - 2015
   company: PC Arts Argentina
-  details: "Administration of O365, Assessment provided to partners, customized Microsoft solutions, 
-  trainings and demos for partners"
+  details: "Administration of O365/Azure tenant, Assessment provided to partners, customized Microsoft solutions, 
+  trainings and demos"
