--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,9 @@ resume:
   name: Matias Volgyi
   tagline: Software Developer
   pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
-  summary: 'Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-  You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean
-  commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-  montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.'
+  summary: 'Software developer with 7+ years of System Administration experience. Now working on become a full-time developer
+  while learning JavaScript (Typescript) C#, Phyton, Angular and moere!. 
+  I'm currently working for an oportunity to give my career a twist with any all these new technologies.'
   email: matias.volgyi@gmail.com
   phone: +54 11 5377 5021
   website: volgyi.com #do not add http://
