--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 name: Matias Volgyi
 description: I salut you
-longdescription: I have something to say. 
+longdescription: I present my self. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/772100?s=400&u=2be94988e7d2a1ab8eb68cd7366919e65058e125&v=4
