--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ resume:
   name: Matias Volgyi
   tagline: Software Developer
   pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
-  summary: 'Software developer with 7+ years of System Administration experience. Now working on become a full-time developer
+  summary: Software developer with 7+ years of System Administration experience. Now working on become a full-time developer
   while learning JavaScript (Typescript) C#, Phyton, Angular and moere!. 
-  I'm currently working for an oportunity to give my career a twist with any all these new technologies.'
+  I'm currently working for an oportunity to give my career a twist with any all these new technologies.
   email: matias.volgyi@gmail.com
   phone: +54 11 5377 5021
   website: volgyi.com #do not add http://
