--- a/_config.yml
+++ b/_config.yml
@@ -4,24 +4,21 @@
 
 name: Matias Volgyi
 description: I salut you
-longdescription: I present my self. 
+longdescription: presenting myself. 
+
+# for contact page
+email: matias.volgyi@gmail.com
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars2.githubusercontent.com/u/772100?s=400&u=2be94988e7d2a1ab8eb68cd7366919e65058e125&v=4
-
-author:
-name: Matias Volgyi
-position: SysAdmin, Software Developer, father, enthusiast
-about: I'm a system administrator with 7+ years of experience. Now working on my new challenge, become a full-time software developer.
+avatar: https://avatars2.githubusercontent.com/u/772100
 
 resume:
   name: Matias Volgyi
   tagline: Software Developer
-  pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
-  summary: 
+  summary: 'I am a system administrator with 7+ years of experience. Now working on my new challenge, become a full-time software developer.'
   email: matias.volgyi@gmail.com
-  phone: +54 11 5377 5021
-  website: volgyi.com #do not add http://
+  phone: 
+  website: #blog.webjeda.com #do not add http://
   linkedin: mvolgyi
   github: mvolgyi
   twitter: '@mvolgyi'
@@ -31,7 +28,7 @@ resume:
 footer-links:
   email: matias.volgyi@gmail.com
   github: mvolgyi
-  # rss: .
+  rss: .
 
 baseurl: ""
 
