Fixing missing letter in description :D

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 name: Matias Volgyi
-description: I salut you
+description: I salute you
 longdescription: presenting myself. 
 
 # for contact page
