--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ avatar: https://avatars2.githubusercontent.com/u/772100
 resume:
   name: Matias Volgyi
   tagline: Software Developer
-  summary: 'I am a system administrator with 7+ years of experience. Now working on my new challenge, become a full-time software developer.'
+  summary: 'I am a system administrator with 7+ years of experience. Now working as a part-time software developer.'
   email: matias.volgyi@gmail.com
   phone: 
   website: #mvolgyi.com #do not add http://
